Add detail view to respository (tree) view

--- a/Bonobo.Git.Server/Views/Repository/Index.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Index.cshtml
@@ -129,7 +129,7 @@
                         format: (item) => Html.ActionLink(
                                 GetNameToDisplay((string)item.Name, (RepositoryDetailStatus)item.Status),
 
-                                "Detail",
+                                "Tree",
                                 new { id = item.Id },
                                 new
                                 {
