--- a/Bonobo.Git.Server/Views/Repository/Detail.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Detail.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Bonobo.Git.Server.Models.RepositoryDetailModel
 @{
-    Layout = "~/Views/Repository/_RepositoryLayout.cshtml";
+    Layout = null;
     ViewBag.Title = Resources.Repository_Detail_Title;
 }
 @if (Model != null)
