--- a/Bonobo.Git.Server/Views/Repository/Tree.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Tree.cshtml
@@ -29,9 +29,9 @@
                             }
                             else if (item.IsTree)
                             {
-                                @Html.ActionLink(item.Name, "Tree", new { id= ViewBag.ID, encodedName = PathEncoder.Encode(Model.Branch), encodedPath = PathEncoder.Encode(item.Path, allowSlash: true) }, new { @class = "directory" })
+                                @Html.ActionLink(item.Name, "Tree", new { id = ViewBag.ID, encodedName = PathEncoder.Encode(Model.Branch), encodedPath = PathEncoder.Encode(item.Path, allowSlash: true) }, new { @class = "directory" })
                             }
-                            else 
+                            else
                             {
                                 @Html.ActionLink(item.Name, "Blob", new { id = ViewBag.ID, encodedName = PathEncoder.Encode(Model.Branch), encodedPath = PathEncoder.Encode(item.Path, allowSlash: true) }, new { @class = item.IsImage ? "image" : "file" })
                             }
@@ -42,6 +42,8 @@
                 }
             </tbody>
         </table>
+
+        @{ Html.RenderAction("Detail", "Repository", Model.Id);}
 
         @if (!string.IsNullOrEmpty(Model.Readme))
         {
