--- a/Bonobo.Git.Server/Views/Repository/Tree.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Tree.cshtml
@@ -45,6 +45,8 @@
 
         @{ Html.RenderAction("Detail", "Repository", Model.Id);}
 
+        @{ Html.RenderAction("Buttons", "Repository", Model.Id);}
+
         @if (!string.IsNullOrEmpty(Model.Readme))
         {
             <div class="markdown">@Html.MarkdownToHtml(Model.Readme)</div>
