--- a/Bonobo.Git.Server/Views/Repository/Tree.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Tree.cshtml
@@ -57,11 +57,11 @@
             <div class="markdown">@Html.MarkdownToHtml(Model.Readme)</div>
         }
 
-        <div class="pure-menu pure-menu-open pure-menu-horizontal repository-menu">
+        @*<div class="pure-menu pure-menu-open pure-menu-horizontal repository-menu">
             <ul>
                 <li><a href="@Url.Action("Download", new { encodedName = PathEncoder.Encode(Model.Branch), encodedPath = PathEncoder.Encode(Model.Path, allowSlash: true) })"><i class="fa fa-download"></i>@Resources.Repository_Tree_Zip</a></li>
             </ul>
-        </div>
+        </div>*@
     </div>
 }
 
