--- a/Bonobo.Git.Server/Views/Repository/_RepositoryLayout.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/_RepositoryLayout.cshtml
@@ -7,7 +7,7 @@
 }
 else
 {
-      <text>
+    <text>
         <h1>
             @Html.Raw(Model.Logo.Exists ? string.Format("<img src='data:image/png;base64,{0}' class='repo-logo' />", Model.Logo.Base64Image) : "")
             @Model.Name
@@ -18,67 +18,39 @@ else
                 <li><a href="@Url.Action("Tree", new { id = ViewBag.ID })" class="browser"><i class="fa fa-files-o"></i> @Resources.Repository_Layout_Browse</a></li>
                 <li><a href="@Url.Action("Commits", new { id = ViewBag.ID })" class="commits"><i class="fa fa-random"></i> @Resources.Repository_Layout_Commits</a></li>
                 <li><a href="@Url.Action("Tags", new { id = ViewBag.ID })" class="tags"><i class="fa fa-tag"></i> @Resources.Repository_Layout_Tags</a></li>
-                @*<li><a href="@Url.Action("Download", new { id = ViewBag.ID })" class="download"><i class="fa fa-download"></i> @Resources.Repository_Tree_Zip</a></li>
-        <li><a href="@Url.Action("Clone", new { id = ViewBag.ID })" class="clone"><i class="fa fa-copy"></i> @Resources.Repository_Layout_Clone</a></li>*@
-                @*<li class="dropdown">
-            <i class="fa fa-chevron-down"></i>
-            <label for="touch"> Code </label>
-            <input id="touch" type="checkbox"/>
-            <ul>
-                <li><a href="@Url.Action("Download", new { id = ViewBag.ID })" class="download"><i class="fa fa-download"></i> @Resources.Repository_Tree_Zip</a></li>
-                <li><a href="@Url.Action("Clone", new { id = ViewBag.ID })" class="clone"><i class="fa fa-copy"></i> @Resources.Repository_Layout_Clone</a></li>
-                <li>
-                    <div class="pure-control-group">
-                        <label>@Resources.Repository_Detail_Location</label>
-                        <button class="pure-button copy-to-clip-button" data-clipboard-target=".git-url-text"><i class="fa fa-copy"></i>@Resources.Copy</button>
-                        <span class="git-url-text">@Model.GitUrl</span>
-                    </div>
-                </li>
-                <li>
-                    @if (User.Identity.IsAuthenticated)
-                    {
-                        <div class="pure-control-group">
-                            <label>
-                                @Resources.Repository_Detail_Location_Personal
-                            </label>
-                            <button class="pure-button copy-to-clip-button" data-clipboard-target=".personal-url-text"><i class="fa fa-copy"></i>@Resources.Copy</button>
-                            <span class="personal-url-text">@Model.PersonalGitUrl</span>
+                <li class="dropdown">
+                    <details style="display:inline-block;">
+                        <summary><i class="fa fa-chevron-down"></i>Code</summary>
+                        <div style="position:fixed;">
+                            @*To get dropdown box as Relative to Fixed postition*@
+                        <div class="dropdownBox">
+                            <div>
+                                @*Git URL + Copy Button*@
+                            <label>@Resources.Repository_Detail_Location</label>
+                            <span class="git-url-text">@Model.GitUrl</span>
+                            <button class="pure-button copy-to-clip-button layout" data-clipboard-target=".git-url-text"><i class="fa fa-clipboard"></i></button>
                         </div>
-                    }
-                </li>
-            </ul>
-        </li>*@
-                <li style="display:inline-block;">
-                    
-                        <details style="display:inline-block;" >
-                            <summary><i class="fa fa-chevron-down"></i>Code</summary>
-                            <div class="">
-                                <a href="@Url.Action("Download", new { id = ViewBag.ID })" class="download"><i class="fa fa-download"></i> @Resources.Repository_Tree_Zip</a>
-                                <a href="@Url.Action("Clone", new { id = ViewBag.ID })" class="clone"><i class="fa fa-copy"></i> @Resources.Repository_Layout_Clone</a>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <div>
+                                @*Personal URL + Copy Button*@
+                                <label>
+                                    @Resources.Repository_Detail_Location_Personal
+                                </label>
+                                <span class="personal-url-text">@Model.PersonalGitUrl</span>
+                                <button class="pure-button copy-to-clip-button layout" data-clipboard-target=".personal-url-text"><i class="fa fa-copy"></i></button>
                             </div>
-                            <div class="">
-                                <label>@Resources.Repository_Detail_Location</label>
-                                <span class="git-url-text">@Model.GitUrl</span>
-                                <button class="pure-button copy-to-clip-button" data-clipboard-target=".git-url-text"><i class="fa fa-copy"></i>@Resources.Copy</button>
-                            </div>
-
-                            @if (User.Identity.IsAuthenticated)
-                            {
-                                <div class="">
-                                    <label>
-                                        @Resources.Repository_Detail_Location_Personal
-                                    </label>
-                                    <span class="personal-url-text">@Model.PersonalGitUrl</span>
-                                    <button class="pure-button copy-to-clip-button" data-clipboard-target=".personal-url-text"><i class="fa fa-copy"></i>@Resources.Copy</button>
-                                </div>
-                            }
-                            
-                        </details>
-                    
-
-                </li>
-            </ul>
-        </div>
+                        }
+                        <div>
+                            <a href="@Url.Action("Download", new { id = ViewBag.ID })" class="download"><i class="fa fa-download"></i> @Resources.Repository_Tree_Zip</a>
+                            <a href="@Url.Action("Clone", new { id = ViewBag.ID })" class="clone"><i class="fa fa-copy"></i> @Resources.Repository_Layout_Clone</a>
+                        </div>
+                    </div>
+                </div>
+            </details>
+        </li>
+    </ul>
+</div>
     </text>
 }
 @RenderBody()
@@ -86,4 +58,5 @@ else
 @section scripts
 {
     @RenderSection("scripts", false)
+   <script>new Clipboard('.copy-to-clip-button');</script>
 }
