--- a/Bonobo.Git.Server/Content/sidebar.css
+++ b/Bonobo.Git.Server/Content/sidebar.css
@@ -42,8 +42,8 @@
 }
 .pure-form.pure-form-aligned.detail fieldset {
     padding: 0.8em 0.8em 0.8em 0.8em;
-    background-color: hsla(210,18%,87%,1);
-    border-radius: 0px;
+    background-color: #E6E6E6; /*hsla(210,18%,87%,1)*/
+    border-radius: 10px;
 }
 .sidebar-overflowtext {
     display: inline-block;
